@@ -38,6 +38,9 @@ Release 0.11.0 - unreleased
 
   BUG FIXES
 
+    TAJO-1396: Unexpected IllegalMonitorStateException can be thrown 
+    in QueryInProgress. (Contributed by navis. Committed by jinho)
+
     TAJO-1414: Two RemoteException in rpc module. 
     (Contributed by navis. Committed by jihun)
 
